# ai-roi-mcm-npv-marimo

./: CLAUDE.md  PPF.md  README.md  ai_roi_mcm_npv.py  marimo_components.py  monte_carlo_normal.py  npv_model.py  npv_sim.py  params_pert.py  params_to_sim.py  ppf.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: lint.yml  publish.yml
marimo_utils/: __init__.py  marimo_components.py
monaco_utils/: __init__.py  params_to_sim.py  sim_factory.py
tests/: test_npv_model.py
