[project]
name = "ai-npv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.14.10",
    "matplotlib>=3.10.3",
    "monaco>=0.15.1",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "scipy>=1.16.0",
]
