[project]
name = "ai-npv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "betapert>=0.1.5",
    "marimo>=0.14.10",
    "matplotlib>=3.10.3",
    "monaco>=0.15.1",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]

[tool.marimo.runtime]
pythonpath = ["."]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"ai_roi_mcm_npv.py" = ["ANN001", "ANN201", "ANN202", "D103", "E501", "F841", "N803", "PLC0415", "PLR0913", "W291"]
"**/exceptions.py" = ["ANN204", "D107", "E501"]
"npv_model.py" = ["D103"]
"params_pert.py" = ["D103"]
"tests/*.py" = ["ANN001", "ANN201", "D100", "D102", "D400", "D415", "E501", "F401", "INP001", "PLC0415", "PLR2004", "PT009", "PT027", "S101", "SIM115", "TRY003"]


[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"